--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CeritaKita</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fortawesome.github.io/Font-Awesome/icons/">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resp.css">
   </head>
   <body>
   <!-- HEADER -->
+  <div class="bg">
     <header>
       <div class="container">
         <div class="header-left">
-          <img src="logo.png">
+          <img src="./logo.png" />
           <a href="#">CeritaKita</a>
         </div>
         <div class="header-right">
@@ -43,12 +43,12 @@
         </nav>
       </div> 
     </header>
-  <!-- BATAS HEADER -->
+  
+    <!-- BATAS HEADER -->
 
-  <!-- MAIN -->
+    <!-- MAIN -->
     <main>
-      <div class="container">
-        <div class="pilihan">
+      <div class="wrapper-content">    
           <div id="home">
             <div class="title">
               <h1>CeritaKita</h1>
@@ -71,7 +71,7 @@
             <h1>Events</h1>
             <div class="list-event">
              <div class="event">
-                <img src="img_event2.png">
+                <img src="./img_event2.png" />
                 <a href="#">
                   <h3>Efektivitas Pembelajaran secara Daring (27 Oktober 2021)</h3>
                   <p>Bertukar informasi mengenai metode pembelajaran di masing-masing kampus serta melihat keefektifannya</p>
@@ -82,14 +82,12 @@
                 <p>Tidak ada event lain</p>
              </div>
             </div>
-          </div>      
-        </div>
-      </div>
-     
+          </div>        
+      </div>   
     </main>
-  <!-- BATAS MAIN -->
+    <!-- BATAS MAIN -->
 
-  <!-- FOOTER -->
+    <!-- FOOTER -->
     <footer>
       <div class="container">
         <div class="footer">
@@ -101,6 +99,7 @@
           </div>
       </div>
     </footer>
-  <!-- FOOTER -->
+    <!-- FOOTER -->
+  </div>
   </body>
 </html>
